# codex-usage

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
files/codex-usage@H234598/: applet.js  metadata.json  settings-schema.json  stylesheet.css
scripts/: install_cinnamon_applet.py  uninstall_cinnamon_applet.py
src/codex_usage/: __init__.py  account_lock.py  app_server.py  bridge.py  browser.py  cli.py  config.py  direct.py  extractor.py  health.py  identity.py  json_utils.py  models.py  oauth_browser.py  private_io.py  reactivate.py  render.py  routing.py  scheduler.py  service.py  spark_health.py  state.py  usage_limits.py
systemd/: codex-usage.service  codex-usage.timer
tests/: applet_runtime.test.js  test_account_lock.py  test_app_server.py  test_applet.py  test_bridge.py  test_browser_diagnose.py  test_browser_profile.py  test_ci_workflow.py  test_cli.py  test_config.py  test_direct.py  test_extractor.py  test_health.py  test_identity.py  test_live_direct.py  test_private_io.py  test_reactivate.py  test_render.py  test_routing.py  test_scheduler.py  test_service.py  test_spark_health.py  test_state.py  test_systemd.py  test_usage_limits.py
