[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-usage"
version = "0.6.35"
description = "Poll ChatGPT Codex analytics usage limits for multiple accounts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "playwright>=1.52",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.11",
]

[project.scripts]
codex-usage = "codex_usage.cli:main"
codex-usage-browser = "codex_usage.oauth_browser:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
